moving properties file